--- a/src/app/my-tasks/my-tasks.component.scss
+++ b/src/app/my-tasks/my-tasks.component.scss
@@ -110,6 +110,11 @@
   height: max-content;
   flex: 0 0 auto;
 }
+.dialog-window {
+  min-width: 0;
+  min-height: 0;
+  flex: 0 0 auto;
+}
 .list {
   margin: 0 0 16px;
   height: auto;
